--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head><meta charset="utf-8" />
 		<style type="text/css">
 		body {
 		  font-family: Arial;
@@ -60,7 +60,7 @@
 		}
 
 		/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-		@media screen and (max-width: 800px) {
+		@media screen and (max-width: 1200px) {
 		  .leftcolumn, .rightcolumn {
 			width: 100%;
 			padding: 0;
