fixed some stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		/* Header/Blog Title */
 		.header {
-		  padding: 30px;
+		  padding: 20px;
 		  font-size: 40px;
 		  text-align: center;
 		  background: white;
@@ -25,16 +25,16 @@
 
 		/* Right column */
 		.rightcolumn {
-		  float: left;
-		  width: 15%;
-		  padding-left: 20px;
+		  float: right;
+		  width: 24%;
+		  padding-left: 10px;
 		}
 
 		/* Fake image */
 		.fakeimg {
 		  background-color: #aaa;
 		  width: 100%;
-		  padding: 20px;
+		  padding: 0px; 
 		}
 
 		/* Add a card effect for articles */
@@ -60,7 +60,7 @@
 		}
 
 		/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-		@media screen and (max-width: 1200px) {
+		@media screen and (max-width: 800px) {
 		  .leftcolumn, .rightcolumn {
 			width: 100%;
 			padding: 0;
