--- a/index — kopia.html
+++ b/index — kopia.html
@@ -80,6 +80,7 @@
 			  <h5>Title description, Dec 7, 2017</h5>
 			  <div class="fakeimg" style="height:200px;">Image</div>
 			  <p>Some text..</p>
+			  <?PHP echo "cokolwiek"; ?>
 			</div>
 			<div class="card">
 			  <h2>TITLE HEADING</h2>
